--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,26 @@
 [package]
 name = "pbfextractor"
-version = "0.1.0"
-authors = ["Florian Barth <florianbarth@gmx.de>"]
+version = "0.1.1"
+description = "Pbfextractor creates graph-files from osm-, pbf- and srtm-data"
 edition = "2018"
 
+authors = [
+    "Florian Barth <florianbarth@gmx.de>",
+    "dominicparga <dominic.parga@gmail.com>",
+]
+repository = "https://github.com/dominicparga/pbfextractor"
+readme = "README.md"
+keywords = ["osm", "parsing", "text", "pbf", "xml"]
+categories = ["algorithms", "data-structures", "parser-implementations", "parsing", ""]
+license = "GPL"
+
+
 [dependencies]
-osmpbfreader = "*"
 byteorder = "*"
+clap = "2.33" # cmdline-parsing
+env_logger = "0.6" # logging for external use, e.g. main.rs and examples
 flate2 = "*"
-clap = "*"
-rand = "0.6"
+log = "0.4"        # logging for internal use, e.g. lib.rs
+osmpbfreader = "0.13" # read osm.pbf-files
+rand = "0.7" # generate random routes
+rand_pcg = "0.2" # generate random routes
