--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pbfextractor"
 version = "0.1.1"
-description = "Pbfextractor creates graph-files from osm-, pbf- and srtm-data"
+description = "Pbfextractor creates graph-files with multidimensional costs from osm-, pbf- and srtm-data"
 edition = "2018"
 
 authors = [
