--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "GPL"
 byteorder = "*"
 clap = "2.33" # cmdline-parsing
 env_logger = "0.6" # logging for external use, e.g. main.rs and examples
-flate2 = "*"
+flate2 = "1"
 log = "0.4" # logging for internal use, e.g. lib.rs
 osmpbfreader = "0.13" # read osm.pbf-files
 rand = "0.7" # generating random edge-weights
